# webapp

.devcontainer/: devcontainer.json
projects/noel_candice/: pyproject.toml
projects/noel_candice/.github/workflows/: cd.yml
projects/noel_candice/backend/: .pre-commit-config.yaml  main.py
projects/noel_candice/frontend/: app.py  background.py  cadenas_utils.py  crendentials.yaml  enigme_page_generation.py  requirement.txt
projects/noel_candice/frontend/pages/: enigme_1.py  enigme_2.py  enigme_3.py  main_page.py
