[tool.poetry]
name = "noel_candice"
version = "0.1.0"
description = ""
authors = ["Joachim Moussalli <joachim.moussalli@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
streamlit = "^1.38.0"
streamlit-authenticator = "^0.4.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pylint = "^3.3.1"
ruff = "^0.6.7"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
